<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:id="@+id/view">
    <TextView
        android:id="@+id/meiyu"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/layer3_p05_00_08"
        android:text="@string/mei_yu_live"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:textSize="15sp"
        android:gravity="center"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/taoshi"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/layer3_p05_00_08"
        android:text="@string/taoshi_live"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="20dp"
        android:textSize="15sp"
        android:gravity="center"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/yushuo"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/layer3_p05_00_08"
        android:text="@string/yushuo_live"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="20dp"
        android:textSize="15sp"
        android:gravity="center"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/r5_sored"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/cancel"/>
</LinearLayout>