<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="SmallSp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_login"
        android:scaleType="fitXY" />
    <LinearLayout
        android:id="@+id/login_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:background="@drawable/r2_sowhite">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/blackLight"
                    android:minWidth="50dp"
                    android:textSize="13.5sp"
                    android:text="@string/_86"/>
                <EditText
                    android:id="@+id/account"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@null"
                    android:textColor="@color/blackLight"
                    android:textSize="13sp"
                    android:digits="0123456789"
                    android:inputType="phone"
                    android:hint="@string/plz_input_tel"
                    android:layout_weight="1"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lineGray"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>
            <LinearLayout
                android:id="@+id/linear_pwd"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/blackLight"
                    android:minWidth="50dp"
                    android:textSize="13.5sp"
                    android:text="@string/pwd"/>
                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@null"
                    android:textColor="@color/blackLight"
                    android:textSize="13sp"
                    android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:hint="@string/plz_input_pwd"
                    android:inputType="textPassword"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_code"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_height="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/blackLight"
                    android:minWidth="50dp"
                    android:textSize="13.5sp"
                    android:text="@string/verification_code"/>
                <EditText
                    android:id="@+id/code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@null"
                    android:textColor="@color/blackLight"
                    android:textSize="13sp"
                    android:digits="0123456789"
                    android:hint="@string/plz_input_code"
                    android:inputType="number"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/get_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/get_code"
                    android:gravity="center"
                    android:textSize="12.5sp"
                    android:textColor="@color/blackLight"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:background="@drawable/r2_sowhite_stblack"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="13.5sp"
            android:textColor="@color/white"
            android:text="@string/login"
            android:background="@drawable/r2_soblack"
            android:layout_marginStart="80dp"
            android:gravity="center"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="25dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp">
            <TextView
                android:id="@+id/login_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/blackLight"
                android:text="@string/login_forget" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/blackLight"
                android:text="@string/login_register" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lineGray"
                android:layout_weight="1"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blackLight"
                android:text="@string/third_login"
                android:layout_gravity="center_vertical" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/lineGray"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="70dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:baselineAligned="false">
            <LinearLayout
                android:id="@+id/login_qq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:padding="8dp"
                    android:src="@drawable/login_qq"/>
                <TextView
                    android:textSize="11sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/blackLight"
                    android:text="@string/qq"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/login_wechat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:padding="8dp"
                    android:src="@drawable/login_wechat"/>
                <TextView
                    android:textSize="11sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/blackLight"
                    android:text="@string/wechat"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/login_weibo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:padding="8dp"
                    android:src="@drawable/login_weibo"/>
                <TextView
                    android:textSize="11sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/blackLight"
                    android:text="@string/weibo"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/login_duanxin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:padding="8dp"
                    android:src="@drawable/login_duanxin"/>
                <TextView
                    android:textSize="11sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/blackLight"
                    android:text="@string/duanxin"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/login_mima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:padding="8dp"
                    android:src="@drawable/login_mima" />
                <TextView
                    android:textSize="11sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blackLight"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login_mima" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>