<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/refund_reason"
        android:textColor="@color/blackLight"
        android:textSize="16sp"
        android:layout_margin="15dp"/>
    <LinearLayout
        android:id="@+id/no_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <TextView
            android:id="@+id/no_reason_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blackLight"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/no_reason_in7day"/>
        <TextView
            android:id="@+id/why_cant_choose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"/>
        <com.yuanyu.ceramics.common.view.SmoothCheckBox
            android:id="@+id/no_reason_check"
            android:layout_marginEnd="10dp"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            app:color_checked="@color/colorPrimary"
            app:stroke_width="0.3dp"
            app:color_unchecked="@color/white"
            app:color_unchecked_stroke="@color/blackLight"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/poor_quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <TextView
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blackLight"
            android:textSize="15sp"
            android:text="@string/poor_quality"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"/>
        <com.yuanyu.ceramics.common.view.SmoothCheckBox
            android:id="@+id/poor_quality_check"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            app:color_checked="@color/colorPrimary"
            app:stroke_width="0.3dp"
            app:color_unchecked="@color/white"
            android:layout_marginEnd="10dp"
            app:color_unchecked_stroke="@color/blackLight"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/false_delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <TextView
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blackLight"
            android:textSize="15sp"
            android:text="@string/false_delivery"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"/>
        <com.yuanyu.ceramics.common.view.SmoothCheckBox
            android:id="@+id/false_delivery_check"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            app:color_checked="@color/colorPrimary"
            app:stroke_width="0.3dp"
            app:color_unchecked="@color/white"
            android:layout_marginEnd="10dp"
            app:color_unchecked_stroke="@color/blackLight"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/describe_discrepancy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <TextView
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blackLight"
            android:textSize="15sp"
            android:text="@string/describe_discrepancy"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"/>
        <com.yuanyu.ceramics.common.view.SmoothCheckBox
            android:id="@+id/describe_discrepancy_check"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            app:color_checked="@color/colorPrimary"
            app:stroke_width="0.3dp"
            app:color_unchecked="@color/white"
            android:layout_marginEnd="10dp"
            app:color_unchecked_stroke="@color/blackLight"/>
    </LinearLayout>
    <TextView
        android:id="@+id/cancel"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:text="@string/close"
        android:gravity="center"
        android:background="@drawable/r2_socyan"
        android:layout_height="35dp"/>
</LinearLayout>